--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,58 @@
+image: node:13.1
+
 stages:
+    - setup
+    - build
     - test
+    - deploy
+
+node:install:
+    stage: setup
+    script:
+        - npm i
+    cache:
+        key: $CI_COMMIT_REF_SLUG
+        paths:
+            - node_modules/
+        policy: pull-push
+    artifacts:
+        paths:
+            - node_modules/
+
+build:
+    stage: build
+    script:
+        - npm run build
+    cache:
+        key: $CI_COMMIT_REF_SLUG
+        paths:
+            - node_modules/
+        policy: pull-push
+    artifacts:
+        paths:
+            - build/
 
 test:
+    image: docker:19.03.1
     stage: test
     script:
-        - echo "Hello World"
-# stages:
-#     - build
-#     - deploy
+        - docker ps -a
+    cache:
+        key: $CI_COMMIT_REF_SLUG
+        paths:
+            - node_modules/
+        policy: pull-push
 
-# build:
-#     stage: build
-#     script:
-#         - npm install
-#         - npm run build
-#         - echo $SECRET_JSON >> ./build/config/secret.json
-#     artifacts:
-#         paths:
-#             - ./*
-
-# deploy:
-#     only:
-#         - production
-#     stage: deploy
-#     script:
-#         - cp package.json /usr/local/node/DecentNoobBotRedux/
-#         - cp -r build /usr/local/node/DecentNoobBotRedux/
-#         - cp -r node_modules /usr/local/node/DecentNoobBotRedux/
-#         # - pm2 restart DecentNoobBot
-#     environment: production
+docker:deploy:
+    image:
+        name: docker/compose:1.24.1
+        entrypoint: ["/bin/sh", "-c"]
+    stage: deploy
+    script:
+        - docker-compose -f docker/docker-compose.yml build
+        - docker-compose -f docker/docker-compose.yml up -d
+    cache:
+        key: $CI_COMMIT_REF_SLUG
+        paths:
+            - node_modules/
+        policy: pull-push
