Update yml to fix errors

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,8 @@ node:install:
 build:
     stage: build
     script:
-        - echo $SECRET_JSON > ./src/app/config/secret.ts
+        - ls
+        - echo $SECRET_JSON > src/app/config/secret.ts
         - npm run build
     cache:
         key: $CI_COMMIT_REF_SLUG
