--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,7 @@ node:install:
 build:
     stage: build
     script:
-        - ls
-        - echo $SECRET_JSON > src/app/config/secret.ts
+        - echo $SECRET_JSON >> src/app/config/secret.ts
         - npm run build
     cache:
         key: $CI_COMMIT_REF_SLUG
