--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ node:install:
 build:
     stage: build
     script:
+        - mkdir src/app/config
         - echo $SECRET_JSON >> src/app/config/secret.ts
         - npm run build
     cache:
