--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,8 @@ services:
         build: ../
         depends_on:
             - dnb_db
+        environment:
+            - BOT_TOKEN
     dnb_db:
         image: mongo
         # ports:
