--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "dependencies": {
         "discord.js": "^11.4.2",
+        "dotenv": "^8.2.0",
         "request": "^2.88.0"
     },
     "devDependencies": {
