--- a/package.json
+++ b/package.json
@@ -6,25 +6,36 @@
     "scripts": {
         "build": "tsc",
         "start": "node .",
-        "dev": "ts-node-dev ./src/index.ts",
         "build:start": "npm run build && npm run start",
-        "docker:build": "docker-compose -f docker/docker-compose.yml build",
-        "docker:deploy": "docker-compose -f docker/docker-compose.yml up -d",
-        "docker": "npm run docker:build && npm run docker:deploy",
-        "deploy": "npm run build && npm run docker"
+        "watch": "tsc -w"
     },
     "author": "Louis Meyer",
     "license": "ISC",
     "dependencies": {
-        "discord.js": "^11.4.2",
+        "body-parser": "^1.19.0",
+        "bre4k3r-api-client": "git+https://git.bre4k3r.de/dev-bre4k3r/http-api-client.git",
+        "dependory": "^0.7.1",
+        "discord.js": "^12.1.1",
         "dotenv": "^8.2.0",
-        "request": "^2.88.0"
+        "express": "^4.17.1",
+        "logsen": "^1.2.0",
+        "mysql2": "^2.1.0",
+        "request": "^2.88.2",
+        "sequelize": "^5.21.12",
+        "sqlite3": "^4.2.0"
     },
     "devDependencies": {
+        "@types/body-parser": "^1.19.0",
+        "@types/express": "^4.17.6",
+        "@types/mysql2": "github:types/mysql2",
         "@types/node": "^11.12.2",
-        "@types/request": "^2.48.1",
-        "ts-node": "^8.0.3",
-        "ts-node-dev": "^1.0.0-pre.32",
+        "@types/request": "^2.48.4",
+        "@types/sequelize": "^4.28.9",
+        "@types/sqlite3": "^3.1.6",
+        "@types/ws": "^7.2.3",
+        "rimraf": "^3.0.2",
+        "tslint": "^6.1.2",
+        "tslint-config-prettier": "^1.18.0",
         "typescript": "^3.4.1"
     }
 }
