--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "This is my typescript + redux version of the DecentNoobBot.",
     "main": "build/index.js",
     "scripts": {
-        "build": "tsc",
+        "build": "rimraf build && tsc",
         "start": "node .",
         "build:start": "npm run build && npm run start",
         "watch": "tsc -w"
