--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "mysql2": "^2.1.0",
         "request": "^2.88.2",
         "sequelize": "^5.21.12",
-        "sqlite3": "^4.2.0"
+        "sqlite3": "^4.2.0",
+        "tmi.js": "^1.5.0"
     },
     "devDependencies": {
         "@types/body-parser": "^1.19.0",
@@ -32,6 +33,7 @@
         "@types/request": "^2.48.4",
         "@types/sequelize": "^4.28.9",
         "@types/sqlite3": "^3.1.6",
+        "@types/tmi.js": "^1.4.0",
         "@types/ws": "^7.2.3",
         "rimraf": "^3.0.2",
         "tslint": "^6.1.2",
