--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,35 +43,35 @@ build:
 #             - node_modules/
 #         policy: pull-push
 
-docker:dev:deploy:
-    except:
-        - master
-    image:
-        name: docker/compose:1.24.1
-        entrypoint: ["/bin/sh", "-c"]
-    stage: deploy
-    script:
-        - docker-compose -f dnb_docker/docker-compose.dev.yml build
-        - docker-compose -f dnb_docker/docker-compose.dev.yml up -d
-    cache:
-        key: $CI_COMMIT_REF_SLUG
-        paths:
-            - node_modules/
-        policy: pull-push
+# docker:dev:deploy:
+#     except:
+#         - master
+#     image:
+#         name: docker/compose:1.24.1
+#         entrypoint: ["/bin/sh", "-c"]
+#     stage: deploy
+#     script:
+#         - docker-compose -f dnb_docker/docker-compose.dev.yml build
+#         - docker-compose -f dnb_docker/docker-compose.dev.yml up -d
+#     cache:
+#         key: $CI_COMMIT_REF_SLUG
+#         paths:
+#             - node_modules/
+#         policy: pull-push
 
-docker:dev:stop:
-    when: manual
-    image:
-        name: docker/compose:1.24.1
-        entrypoint: ["/bin/sh", "-c"]
-    stage: deploy
-    script:
-        - docker-compose -f dnb_docker/docker-compose.dev.yml down
-    cache:
-        key: $CI_COMMIT_REF_SLUG
-        paths:
-            - node_modules/
-        policy: pull-push
+# docker:dev:stop:
+#     when: manual
+#     image:
+#         name: docker/compose:1.24.1
+#         entrypoint: ["/bin/sh", "-c"]
+#     stage: deploy
+#     script:
+#         - docker-compose -f dnb_docker/docker-compose.dev.yml down
+#     cache:
+#         key: $CI_COMMIT_REF_SLUG
+#         paths:
+#             - node_modules/
+#         policy: pull-push
 
 docker:production:deploy:
     only:
