--- a/package.json
+++ b/package.json
@@ -19,25 +19,21 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "logsen": "^1.2.0",
-        "mysql2": "^2.1.0",
-        "request": "^2.88.2",
-        "sequelize": "^5.21.12",
-        "sqlite3": "^4.2.0",
-        "tmi.js": "^1.5.0"
+        "request": "^2.88.2"
     },
     "devDependencies": {
         "@types/body-parser": "^1.19.0",
         "@types/express": "^4.17.6",
-        "@types/mysql2": "github:types/mysql2",
         "@types/node": "^11.12.2",
         "@types/request": "^2.48.4",
-        "@types/sequelize": "^4.28.9",
-        "@types/sqlite3": "^3.1.6",
-        "@types/tmi.js": "^1.4.0",
         "@types/ws": "^7.2.3",
         "rimraf": "^3.0.2",
-        "tslint": "^6.1.2",
-        "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.4.1"
+        "typescript": "^3.4.1",
+        "@typescript-eslint/eslint-plugin": "^4.1.0",
+        "@typescript-eslint/parser": "^4.1.0",
+        "eslint": "^7.8.1",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsdoc": "^30.4.0"
     }
 }
